fix for fdo#62729 reference pos can point to non existing table

there is an existing function ( called at least from uno names api also )
that updates the tab pos, calling that seems to fix this problem

Change-Id: I6f6f31895eda9c338eeabd3f3285bf2c9eb23b7e